tests/cases/parser/types/empty_type_args.stderr
error: expected an expression, however received a `>`
 --> $DIR/empty_type_args.hash:3:3
2 |   
3 |   a<> := b + 2;
  |     ^ 
